--- a/src/awebapp/templates/reviews/create-ticket.html
+++ b/src/awebapp/templates/reviews/create-ticket.html
@@ -18,24 +18,25 @@
   </head>
 <body>
   <main role="main" class="container">
-    <form method="post" enctype="multipart/form-data">
+    <div class="row" align="center">
+        <h2> Créer un ticket </h2>
+    </div>
+    <form method="post">
         {% csrf_token %}
-        <div>
-            <div>
-                <h5>Titre</h5>
-                {{ form_ticket.title }}
-                <h5>Description</h5>
-                {{ form_ticket.description }}
-                <br>
-                {{ form_ticket.image }}
-                {{ form_ticket.user.as_hidden }}
-            </div>
+        <div class="form-group">
+          <label for="title"><h5>Titre</h5></label>
+          <input type="title" class="form-control" id="title" placeholder="Saisissez le titre de votre ticket">
         </div>
-        <div>
-            <button class="btn btn-primary">Envoyer</button>
+        <div class="form-group">
+          <label for="description"><h5>Description</h5></label>
+          <textarea class="form-control" id="description"></textarea>
         </div>
-    </form>
-  
+        <div class="custom-file">
+            <input type="file" class="custom-file-input" id="image">
+            <label class="custom-file-label" for="customFile">Choose file</label>
+          </div>
+        <button class="btn btn-primary">Envoyer</button>
+      </form>
 {% endblock %}
 </body>
 </html>
