--- a/src/awebapp/templates/reviews/create-review.html
+++ b/src/awebapp/templates/reviews/create-review.html
@@ -18,41 +18,40 @@
   </head>
 <div style="border: 2px solid white; margin: 20px">
     <h4 style="text-align: center">Créer une critique</h4>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
             <div style="border: 2px solid white; margin: 20px">
             <div class="col-md-2 col-sm-2">
                 <h5>Livre / Artcile</h5>
           <label for="title"><h5>Titre</h5></label>
-          <input type="title" class="form-control" id="title">
+          <input value="{{ form_ticket.title }}" type="title" class="form-control" id="title">
         </div>
         <div class="form-group">
           <label for="description"><h5>Description</h5></label>
-          <textarea class="form-control" id="description"></textarea>
+          <textarea class="form-control" value={{ form_ticket.description }} id="description"></textarea>
         </div>
         <div class="custom-file">
-            <input type="file" class="custom-file-input" id="image">
+            <input value="{{ form_ticket.image }}","{{ form_ticket.user.as_hidden }}" type="file" class="custom-file-input" id="image">
             <label class="custom-file-label" for="customFile">Choose file</label>
           </div>
-        <button class="btn btn-primary">Envoyer</button>
         </div>
         <div style="border: 2px solid white; margin: 20px">
             <div class="form-group">
             <div class="col-md-2 col-sm-2">
                 <h5>Critique</h5>
           <label for="title"><h5>Titre</h5></label>
-          <input type="title" class="form-control" id="title">
+          <input value="{{ form_review.headline }}" type="title" class="form-control" id="title">
         </div>
         <div class="form-check form-check-inline">
             <div class="col-md-2 col-sm-2">
                 <h5>Note</h5>
             </div>
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+            <input value="{{ form_review.rating }}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
             <label class="form-check-label" for="inlineRadio1">1</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+            <input value="{{ form_review.rating }}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
             <label class="form-check-label" for="inlineRadio2">2</label>
           </div>
           <div class="form-check form-check-inline">
@@ -60,11 +59,11 @@
             <label class="form-check-label" for="inlineRadio3">3</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+            <input value="{{ form_review.rating }}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
             <label class="form-check-label" for="inlineRadio4">4</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+            <input value="{{ form_review.rating }}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
             <label class="form-check-label" for="inlineRadio5">5</label>
           </div>
           <div class="form-group">
@@ -72,7 +71,7 @@
             <textarea class="form-control" id="commentairereview"></textarea>
           </div>
         <div class="custom-file">
-            <input type="file" class="custom-file-input" id="image">
+            <input value="{{ form_review.body }}","{{ form_review.user.as_hidden }}" type="file" class="custom-file-input" id="image">
             <label class="custom-file-label" for="customFile">Choose file</label>
           </div>
         <button class="btn btn-primary">Envoyer</button>
