--- a/src/awebapp/templates/reviews/create-ticket.html
+++ b/src/awebapp/templates/reviews/create-ticket.html
@@ -21,11 +21,11 @@
     <div class="row" align="center">
         <h2> Créer un ticket </h2>
     </div>
-    <form method="post">
+    <form name="ticket" method="post">
         {% csrf_token %}
         <div class="form-group">
           <label for="title"><h5>Titre</h5></label>
-          <input value="{{ form_ticket.title }}" type="title" class="form-control" id="title" placeholder="Saisissez le titre de votre ticket">
+          <input name="form_ticket" value="{{ form_ticket.title }}" type="title" class="form-control" id="title" placeholder="Saisissez le titre de votre ticket">
         </div>
         <div class="form-group">
           <label for="description"><h5>Description</h5></label>
@@ -33,10 +33,10 @@
         </div>  
         <div class="custom-file">
             <input type="hidden" value="{{ form_ticket.user }}">
-            <input value="{{ form_ticket.image }}" type="file" class="custom-file-input" id="image">
+            <input name="form_ticket" value="{{ form_ticket.image }}" type="file" class="custom-file-input" id="image">
           </div>
         <button class="btn btn-primary">Envoyer</button>
-      </form>
+      </form>   
 {% endblock %}
 </body>
 </html>
