--- a/src/awebapp/templates/reviews/create-ticket.html
+++ b/src/awebapp/templates/reviews/create-ticket.html
@@ -21,21 +21,20 @@
     <div class="row" align="center">
         <h2> Créer un ticket </h2>
     </div>
-    <form name="ticket" method="post">
-        {% csrf_token %}
+    <form name="createticket" enctype="multipart/form-data" method="post">
         <div class="form-group">
           <label for="title"><h5>Titre</h5></label>
-          <input name="form_ticket" value="{{ form_ticket.title }}" type="title" class="form-control" id="title" placeholder="Saisissez le titre de votre ticket">
+          <input name="form_ticket" type="title" class="form-control" id="title" placeholder="Saisissez le titre de votre ticket">
         </div>
         <div class="form-group">
           <label for="description"><h5>Description</h5></label>
-          <textarea value="{{ form_ticket.description }}"class="form-control" id="description"></textarea>
+          <textarea class="form-control" id="description"></textarea>
         </div>  
         <div class="custom-file">
-            <input type="hidden" value="{{ form_ticket.user }}">
-            <input name="form_ticket" value="{{ form_ticket.image }}" type="file" class="custom-file-input" id="image">
+            <input name="imageinput" type="file" class="custom-file-input" id="image">
           </div>
-        <button class="btn btn-primary">Envoyer</button>
+        {% csrf_token %}
+        <button type="submit" class="btn btn-success">Envoyer</button>
       </form>   
 {% endblock %}
 </body>
